it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.43.0 - May ??, 2011

    Updated the Logtalk compiler in order to save the entity clause locations
    and make this information available to back-end Prolog compilers.

    Updated the SWI-Prolog config file in order to avoid preventing loading
    of a Logtalk source file when a Prolog file with the same name exists on
    the same lookup directory.

    Updated the SWI-Prolog integration files in order to hide the sources
    of the Logtalk (::)/2 and (<<)/2 built-in predicates from this compiler
    debugging tools.


2.42.4 - April 4, 2011

    Added an entity_prefix/2 predicate and two sets of utility predicates,
    decompile_predicate_heads/2-4 and decompile_predicate_indicators/2-4,
    to the "logtalk" built-in object. Marked the decompile_predicate_head/4
    and decompile_predicate_indicator/4 as deprecated.

    Added support for preserving the scope information for operators declared
    using scope directives during compile time. Added information on entity
    declared operators to the XML documenting files. Updated the text, PDF,
    and (X)HTML conversion scripts to print out operator information.

    Applied several low-level optimizations to the Logtalk compiler/runtime.

    Moved the internal predicates that construct and access the predicate
    execution context from the compiler to the Prolog config files in order
    to support fine performance tuning that is Prolog compiler dependent.

    Updated the implementation of the threaded/1 multi-threading built-in
    predicate in order to use a small performance optimization based on the
    term_variables/2 built-in predicate suggested by Timon Van Overveldt.
    This optimization aims to reduce unnecessary copy and unification of